[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
sp1-zkvm = "5.0.0"
stwo-verifier-no-std = { git = "https://github.com/trade-vex/stwo-verifier-no-std.git", rev = "74005d6" }
serde_json = "1.0"
serde = "1.0"
num-traits = { version = "0.2.19", default-features = false }
